0.3.4 / 2012-07-03

* Bug fixes

  * Allow upserting by auto-increment primary key (thanks @atandrau https://github.com/seamusabshere/upsert/issues/3)

* Enhancements

  * Make document an optional argument

0.3.3 / 2012-06-26

* Bug fixes

  * Properly quote table names - don't assume that everybody has ANSI_QUOTES turned on in MySQL :)

0.3.2 / 2012-06-22

* Enhancements

  * Make sure ::PGconn is recognized as ::PG::Connection (thanks @joevandyk https://github.com/seamusabshere/upsert/issues/2)

0.3.1 / 2012-06-21

* Bug fixes

  * On PostgreSQL, stop nullifying columns that weren't even involved in the upsert
  * On SQLite, properly join WHERE conditions with ' AND ' instead of ','

0.3.0 / 2012-06-21

* Enhancements

  * Remove all the sampling - just keep a cumulative total of sql bytes as we build up an ON DUPLICATE KEY UPDATE query.
  * Deprecate Upsert.stream in favor of Upsert.batch (but provide an alias for backwards compat)

0.2.2 / 2012-06-21

* Bug fixes

  * Correct and simplify how sql length is calculated when batching MySQL upserts.

0.2.1 / 2012-06-21

* Enhancements

  * Added support for Ruby 1.8.7