@@ -21,17 +21,4 @@ shared_examples_for "supports multibyte" do
       end
     end
   end
-  it "won't overflow" do
-    upsert = Upsert.new connection, :pets
-    if upsert.respond_to?(:max_sql_bytesize)
-      max = upsert.send(:max_sql_bytesize)
-      ticks = max / 3 - 2
-      lambda do
-        loop do
-          upsert.row({:name => 'Jerry'}, :home_address => ("日" * ticks))
-          ticks += 1
-        end
-      end.must_raise Upsert::TooBig
-    end
-  end
 end
